Fixed z-index for backlog panels.
Previous z-index made all backlog inputs unreachable.

--- a/assets/stylesheets/sidebar_hide.css
+++ b/assets/stylesheets/sidebar_hide.css
@@ -1,5 +1,5 @@
 #main-menu .menu-children, .ui-widget-content {
-  z-index: 15;
+  z-index: 1005;
 }
 
 #hideSidebarButton {
